--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "amqplib": "^0.10.3"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.1"
+    "@types/amqplib": "^0.10.1",
+    "@types/node": "^20.4.2"
   }
 }
